save/load model to/from system storage

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <br/><br/>
     <button id="train" onclick="train()">Train</button>
+    <button id="save model" onmousedown="saveModel()">Save Model</button>
 
     <br/><br/>
     <button id="listen" onclick="listen()">Listen</button>
