dataPreprocessing and addition of isolet csv

--- a/take2/index.html
+++ b/take2/index.html
@@ -1,5 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <title>Hello World - TensorFlow.js</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <!-- Import TensorFlow.js library latest -->
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 
@@ -51,6 +57,8 @@
     <button id="train" onclick="train()">Train</button>
     <button id="listen" onclick="listen()">Listen</button>
     <button id="save" onclick="save()">Save</button>
+    <button id="load" onclick="loadNewModel()">Load</button>
+
     <br/><br/>
     <div id="console"></div>
     <script src="script.js"></script>
