--- a/take2/index.html
+++ b/take2/index.html
@@ -54,10 +54,10 @@
     <button id="Train" onmousedown="collect(34)"onmouseup="collect(null)">Train</button>
     <button id="Noise" onmousedown="collect(35)"onmouseup="collect(null)">Noise</button>
     <br/><br/>
-    <button id="train" onclick="train()">Train</button>
-    <button id="listen" onclick="listen()">Listen</button>
-    <button id="save" onclick="save()">Save</button>
-    <button id="load" onclick="loadNewModel()">Load</button>
+    <button id="train" onclick="train()">Train Model</button>
+    <button id="listen" onclick="listen()">Listen/Test Model</button>
+    <button id="save" onclick="save()">Save Model</button>
+    <button id="load" onclick="loadNewModel()">Load Saved Model</button>
 
     <br/><br/>
     <div id="console"></div>
